--- a/static/css/base.css
+++ b/static/css/base.css
@@ -196,7 +196,7 @@ header nav {
 .icon-block .material-icons {
   font-size: inherit;
 }
-.slider h3, .slider h5 {
+.slider h3, .slider h5, .light-shadow {
     text-shadow: 2px 2px 5px #000000;
 }
 .slider .indicators .indicator-item.active {
@@ -221,10 +221,6 @@ header nav {
 
 /* All Products Page */
 
-.product-card-container {
-    /* width: 450px; */
-}
-
 .product-card-container .card-image, .card-content {
     height: 250px;
     padding-top: 5px;
@@ -237,6 +233,7 @@ header nav {
 .product-card-container .card-image img {
     max-height: 245px;
     width: auto;
+    max-width: 100%;
     margin: 10px auto 0px auto
 }
 
@@ -248,6 +245,11 @@ header nav {
     height: 45%;
 }
 
+.rating-stars-container {
+    height: 25%;
+    overflow-y: auto;
+}
+
 .card-content .badge {
     float: left;
     margin-right: 14px;
@@ -257,6 +259,8 @@ header nav {
 #card-price-text {
     color: #00a890
 }
+
+
 
 /* ---------- Footer ------------ */
 
@@ -297,7 +301,7 @@ footer.page-footer {
         font-size: 1.7rem; 
     }
     .about-parallax-container {
-        height: 150vh;
+        height: 200vh;
     }
     .question-parallax {
         height: 60vh;
