changed background images of home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -98,7 +98,7 @@
                 </div>                
             </div>
         </div>
-        <div class="parallax"><img src="{{ MEDIA_URL }}background12.jpg" alt="Guatemala Antigua Town Background Image"></div>
+        <div class="parallax"><img src="{{ MEDIA_URL }}background4.jpg" alt="Coffee Plant Fruits Image"></div>
     </div>
     <div class="container">
         <div class="section">
@@ -159,7 +159,7 @@
 		<div class="section no-pad-bot">
 			<div class="container">
 				<br><br>
-				<h1 class="header center cyan-text text-darken-2">Enjoyed Our Coffee?</h1>
+				<h1 class="header center cyan-text text-lighten-2 light-shadow">Enjoyed Our Coffee?</h1>
 				<div class="row center">
 					<h5 class="header col s12 light">Do you have a favorite coffee from our store?</h5>
                     <h5>Let us know leaving a review of our products!</h5>
@@ -170,7 +170,7 @@
 				<br><br>
             </div>
 		</div>
-		<div class="parallax"><img src="{{ MEDIA_URL }}background6.jpg" alt="Coffee Beans Background Image"></div>
+		<div class="parallax"><img src="{{ MEDIA_URL }}background7.jpg" alt="Guatemalan Antigua Town Background Image"></div>
 	</div>
 {% endblock %}
 
