--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -19,21 +19,59 @@
     <div class="container">
 		<div class="section">
             <div class="row">
-                <div class="col s12">
-                    <div class="carousel">
-                        <a class="carousel-item"><img class="materialboxed" width="250" data-caption="{{ product.name }}" src="{{ product.main_image.url }}" alt="{{ product.name }}"></a>
-                        {% for item in image_list %}
-                        <a class="carousel-item"><img class="materialboxed" width="250" data-caption="{{ product.name }}" src="{{ item.image.url }}" alt="{{ product.name }}"></a>
-                        {% endfor %}
+                <div class="col s12 center-text text-center">
+                    <h4 class="center-text">{{ product.name }}</h4>
+                </div>
+                <div class="col s12 m6">
+                     <div class="card">
+                        <div class="card-image">
+                            {% if product.main_image %}
+                            <a href="{% url 'product_detail' product.id %}">
+                                <img class="materialboxed" data-caption="{{ product.name }}" src="{{ product.main_image.url }}" alt="{{ product.name }}">
+                            </a>
+                            {% else %}
+                            <a href="{% url 'product_detail' product.id %}">
+                                <img class="" src="{{ MEDIA_URL }}no_image_available.png" alt="{{ product.name }}">
+                            </a>
+                            {% endif %}
+                        </div>
                     </div>
                 </div>
-                <div class="col s12 m8">
-
+                <div class="col s12 m6">
+                    <div class="row">
+                        <div class="col s12 m6">
+                            <h5>$ {{ product.retail_price }}</h5>
+                            {% ratings product %}
+                        </div>
+                        <div class="col s12 m6">
+                            
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
 	</div>
-
+    <!-- Carousel -->
+    <div class="carousel">
+        {% for item in image_list %}
+        <a class="carousel-item"><img class="materialboxed" width="250" data-caption="{{ product.name }}" src="{{ item.image.url }}" alt="{{ product.name }}"></a>
+        {% endfor %}
+    </div>
+    <div class="container">
+		<div class="section">
+            <div class="row">
+                <div class="col s12">
+                    
+                    <ul class="collapsible" data-collapsible="accordion">
+                        <li>
+                            <div class="collapsible-header"><i class="material-icons">filter_drama</i>More Info</div>
+                            <div class="collapsible-body"><p>Some Text</p></div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+		</div>
+    </div>
     
 {% endblock %}
 
@@ -41,9 +79,13 @@
     {{ block.super }}
     <script type="text/javascript">
         $(document).ready(function(){
+            $('.collapsible').collapsible();
             $('.carousel').carousel();
             $('.materialboxed').materialbox();
         });
         $(".button-collapse").sideNav();
+        $('.collapsible-header').on('click', function(){
+            console.log('you clicked!')
+        })
 	</script>
 {% endblock %}
