--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -16,14 +16,31 @@
 {% endblock %}
 
 {% block content %}
+	<div class="fixed-action-btn">
+        <span>Add To Cart</span>
+		<a class="btn-floating btn-large waves-effect waves-light cyan darken-2">
+			<i class="large material-icons">add_shopping_cart</i>
+		</a>
+        <ul>
+            <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+            <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+            <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+            <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li> 
+        </ul>
+	</div>
     <div class="container">
 		<div class="section">
             <div class="row">
-                <div class="col s12 center-text text-center">
+                <div class="col s12 m6">
                     <h4 class="center-text">{{ product.name }}</h4>
                 </div>
+                <div class="show-on-medium-and-up col s12 m6 center-align">
+                    <a class="waves-effect waves-light btn-large add-to-cart-button "><i class="material-icons right">add_shopping_cart</i>Buy This Product</a>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col s12 m6">
-                     <div class="card">
+                     <div class="card hoverable">
                         <div class="card-image">
                             {% if product.main_image %}
                             <a href="{% url 'product_detail' product.id %}">
@@ -37,37 +54,50 @@
                         </div>
                     </div>
                 </div>
-                <div class="col s12 m6">
-                    <div class="row">
-                        <div class="col s12 m6">
-                            <h5>$ {{ product.retail_price }}</h5>
+                <div class="col s12 m6"> 
+                    <div class="row price-rating-container">
+                        <div class="col s12">
+                            <h4 class="detail-price-label cyan-text text-darken-3">$ {{ product.retail_price }}</h4>
                             {% ratings product %}
                         </div>
-                        <div class="col s12 m6">
-                            
+                        <div class="col s12">
+                            <h5 class="cyan-text text-darken-3">About This Product:</h5>
+                            {{ product.description }}
                         </div>
                     </div>
                 </div>
             </div>
+            {% if image_list %}
+            <!-- Carousel -->
+            <div class="row">
+                <h5 class="center-align">More Pictures</h5>
+                <div class="col s12 carousel">
+                {% for item in image_list %}
+                <a class="carousel-item"><img class="materialboxed" width="250" data-caption="{{ product.name }}" src="{{ item.image.url }}" alt="{{ product.name }}"></a>
+                {% endfor %}
+                </div>
+            </div>
+            {% endif %}
         </div>
-	</div>
-    <!-- Carousel -->
-    <div class="carousel">
-        {% for item in image_list %}
-        <a class="carousel-item"><img class="materialboxed" width="250" data-caption="{{ product.name }}" src="{{ item.image.url }}" alt="{{ product.name }}"></a>
-        {% endfor %}
     </div>
     <div class="container">
 		<div class="section">
             <div class="row">
                 <div class="col s12">
-                    
-                    <ul class="collapsible" data-collapsible="accordion">
-                        <li>
-                            <div class="collapsible-header"><i class="material-icons">filter_drama</i>More Info</div>
-                            <div class="collapsible-body"><p>Some Text</p></div>
-                        </li>
-                    </ul>
+					<ul class="collapsible" data-collapsible="accordion">
+						<li>
+							<div class="collapsible-header"><i class="material-icons">filter_drama</i>More About This Product</div>
+							<div class="collapsible-body"><span>{{ product.description_2 }}</span></div>
+						</li>
+						<li>
+							<div class="collapsible-header"><i class="material-icons">place</i>Second</div>
+							<div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+						</li>
+						<li>
+							<div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
+							<div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+						</li>
+					</ul>
                 </div>
             </div>
 		</div>
