--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -31,11 +31,8 @@
     <div class="container">
 		<div class="section">
             <div class="row">
-                <div class="col s12 m6">
-                    <h4 class="center-text">{{ product.name }}</h4>
-                </div>
-                <div class="show-on-medium-and-up col s12 m6 center-align">
-                    <a class="waves-effect waves-light btn-large add-to-cart-button "><i class="material-icons right">add_shopping_cart</i>Buy This Product</a>
+                <div class="col s12">
+                    <h4 class="center-text header">{{ product.name }}</h4>
                 </div>
             </div>
             <div class="row">
@@ -57,29 +54,70 @@
                 <div class="col s12 m6"> 
                     <div class="row price-rating-container">
                         <div class="col s12">
+                            <div class="chip">
+                                <img src="{{ MEDIA_URL }}explore_icon.png" alt="Explore Icon">
+                                {{ product.region.friendly_name }}
+                            </div>
+                            <div class="chip">
+                                <img src="{{ MEDIA_URL }}coffee_bean_icon.png" alt="Explore Icon">
+                                {{ product.roast_level|capfirst }} Roast
+                            </div>
                             <h4 class="detail-price-label cyan-text text-darken-3">$ {{ product.retail_price }}</h4>
                             {% ratings product %}
                         </div>
-                        <div class="col s12">
+                        <div class="col s12 small-text">
                             <h5 class="cyan-text text-darken-3">About This Product:</h5>
-                            {{ product.description }}
+                            <p class="small-text">{{ product.description|safe|truncatewords:"30"|linebreaks }}</p>
+                            <a href="{{ url_for_full_content }}">Read more</a>
                         </div>
                     </div>
                 </div>
             </div>
-            {% if image_list %}
-            <!-- Carousel -->
+
             <div class="row">
-                <h5 class="center-align">More Pictures</h5>
-                <div class="col s12 carousel">
-                {% for item in image_list %}
-                <a class="carousel-item"><img class="materialboxed" width="250" data-caption="{{ product.name }}" src="{{ item.image.url }}" alt="{{ product.name }}"></a>
-                {% endfor %}
+                <div class="col s12 m6">
+                </div>
+                <div class="col s12 m6">
+                    <table class="striped">
+                        <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Item Name</th>
+                            <th>Item Price</th>
+                        </tr>
+                        </thead>
+
+                        <tbody>
+                        <tr>
+                            <td>Alvin</td>
+                            <td>Eclair</td>
+                            <td>$0.87</td>
+                        </tr>
+                        <tr>
+                            <td>Alan</td>
+                            <td>Jellybean</td>
+                            <td>$3.76</td>
+                        </tr>
+                        <tr>
+                            <td>Jonathan</td>
+                            <td>Lollipop</td>
+                            <td>$7.00</td>
+                        </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
-            {% endif %}
         </div>
     </div>
+    <!-- Carousel -->
+    {% if image_list %}
+    <div class="carousel">
+        <h5 class="center-align cyan-text text-darken-3">More Pictures</h5>
+        {% for item in image_list %}
+        <a class="carousel-item"><img class="materialboxed" width="250" data-caption="{{ product.name }}" src="{{ item.image.url }}" alt="{{ product.name }}"></a>
+        {% endfor %}
+    </div>
+    {% endif %}
     <div class="container">
 		<div class="section">
             <div class="row">
