--- a/templates/base.html
+++ b/templates/base.html
@@ -166,7 +166,7 @@
         <div class="modal-content">
             <nav>
                 <div class="nav-wrapper">
-                    <form>
+                    <form method="GET" action="{% url 'products' %}">
                         <div class="input-field">
                             <input name="search-query" id="search-query-input" type="search" placeholder="Search Our Site" required>
                             <label class="label-icon" for="search-query-input"><i class="material-icons">search</i></label>
