--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -22,12 +22,31 @@
             <div class="row">
                 <div class="col s12 m4">
                     <div class="">
-                        <ul class="collection with-header">
-                            <li class="collection-header"><h4>Filter By Region</h4></li>
-                            <li><a href="{% url 'products' %}"class="collection-item">All Regions</a></li>
+                        <ul class="collection with-header hide-on-small-only">
+                            <li class="collection-header"><h4>Search By Region</h4></li>
+                            <li><a href="{% url 'products' %}"class="collection-item ">All Regions</a></li>
                             {% for region in regions %}
                             <li><a href="{% url 'products' %}?region={{region.name}}" class="collection-item">{{ region.friendly_name }}</a></li>
                             {% endfor %}
+                        </ul>
+                        <ul class="collection with-header show-on-small">
+                            <li class="collection-header"><h5>Order Products</h5></li>
+                            <li class="collection-item">
+                                <a class="waves-effect waves-light btn">Lowest Price</a>
+                                <a class="waves-effect waves-light btn">Best Ratings</a>
+                                <a class="waves-effect waves-light btn">New Products</a>
+                            </li>
+                            <li class="collection-item">
+                                <div class="input-field col s12">
+                                    <select>
+                                    <option value="" disabled selected>Choose your option</option>
+                                    <option value="1">Option 1</option>
+                                    <option value="2">Option 2</option>
+                                    <option value="3">Option 3</option>
+                                    </select>
+                                    <label>Materialize Select</label>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -117,6 +136,7 @@
     <script type="text/javascript">
         $(document).ready(function(){
             $('.slider').slider();
+            $('select').material_select();
         });
         $(".button-collapse").sideNav();
 	</script>
