--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -26,25 +26,25 @@
                             <li class="collection-header"><h4>Search By Region</h4></li>
                             <li><a href="{% url 'products' %}"class="collection-item ">All Regions</a></li>
                             {% for region in regions %}
-                            <li><a href="{% url 'products' %}?region={{region.name}}" class="collection-item">{{ region.friendly_name }}</a></li>
+                            <li><a href="{% url 'products' %}?region={{region.name}}" class="collection-item {% if region.name == region_query_name %} active {% endif %}">{{ region.friendly_name }}</a></li>
                             {% endfor %}
                         </ul>
-                        <ul class="collection with-header show-on-small">
-                            <li class="collection-header"><h5>Order Products</h5></li>
-                            <li class="collection-item">
-                                <a class="waves-effect waves-light btn">Lowest Price</a>
-                                <a class="waves-effect waves-light btn">Best Ratings</a>
-                                <a class="waves-effect waves-light btn">New Products</a>
+                        <ul class="collection filter-products-collection with-header show-on-small">
+                            <li class="collection-header"><h5>Filter Products</h5></li>
+                            <li class="collection-item center-align">
+                                <a href="{% url 'products' %}?sort=retail_price&direction=asc" class="waves-effect waves-light white black-text btn filter-products-btn">Lowest Price</a>
+                                <a href="{% url 'products' %}?sort=rating&direction=desc" class="waves-effect waves-light white black-text btn filter-products-btn">Best Ratings</a>
+                                <a href="{% url 'products' %}?sort=new_product" class="waves-effect waves-light white black-text btn filter-products-btn">New Products</a>
                             </li>
                             <li class="collection-item">
-                                <div class="input-field col s12">
-                                    <select>
-                                    <option value="" disabled selected>Choose your option</option>
-                                    <option value="1">Option 1</option>
-                                    <option value="2">Option 2</option>
-                                    <option value="3">Option 3</option>
+                                <div class="input-field">
+                                    <select id="mobile-region-selector">
+                                    <option value="" disabled selected>Select Region</option>
+                                    {% for region in regions %}
+                                    <option value="{{ region.name }}" {% if region.name == region_query_name %}selected{% endif %}>{{ region.friendly_name }}</option>
+                                    {% endfor %}
                                     </select>
-                                    <label>Materialize Select</label>
+                                    <label>Filter Region</label>
                                 </div>
                             </li>
                         </ul>
@@ -63,7 +63,7 @@
                                     </a>
                                     {% else %}
                                     <a href="{% url 'product_detail' product.id %}">
-                                        <img class=""" src="{{ MEDIA_URL }}no_image_available.png" alt="{{ product.name }}">
+                                        <img class="" src="{{ MEDIA_URL }}no_image_available.png" alt="{{ product.name }}">
                                     </a>
                                     {% endif %}
                                     
