--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -32,9 +32,12 @@
                         <ul class="collection filter-products-collection with-header show-on-small">
                             <li class="collection-header"><h5>Filter Products</h5></li>
                             <li class="collection-item center-align">
-                                <a href="{% url 'products' %}?sort=retail_price&direction=asc" class="waves-effect waves-light white black-text btn filter-products-btn">Lowest Price</a>
-                                <a href="{% url 'products' %}?sort=rating&direction=desc" class="waves-effect waves-light white black-text btn filter-products-btn">Best Ratings</a>
-                                <a href="{% url 'products' %}?sort=new" class="waves-effect waves-light white black-text btn filter-products-btn">New Products</a>
+                                <a data-sortkey="retail_price" data-direction="asc" class="waves-effect waves-light white black-text btn filter-products-btn">Lowest Price</a>
+                                <a data-sortkey="rating" data-direction="desc" class="waves-effect waves-light white black-text btn filter-products-btn">Best Ratings</a>
+                                <a data-sortkey="new" data-direction="none" class="waves-effect waves-light white black-text btn filter-products-btn">New Products</a>
+                                <!-- <a data-sortkey="retail_price" data-direction="asc" href="{% url 'products' %}?sort=retail_price&direction=asc" class="waves-effect waves-light white black-text btn filter-products-btn">Lowest Price</a>
+                                <a data-sortkey="rating" data-direction="desc" href="{% url 'products' %}?sort=rating&direction=desc" class="waves-effect waves-light white black-text btn filter-products-btn">Best Ratings</a>
+                                <a data-sortkey="new" data-direction="none" href="{% url 'products' %}?sort=new" class="waves-effect waves-light white black-text btn filter-products-btn">New Products</a> -->
                             </li>
                             <li class="collection-item">
                                 <div class="input-field">
@@ -145,29 +148,32 @@
         });
 	</script>
     <script type="text/javascript">
-        $('.filter-products-btn').change(function() {
+        $('.filter-products-btn').on('click', function() {
             var currentUrl = new URL(window.location);
             var search_params = currentUrl.searchParams
 
-            var selector = $(this);
+            var sortkey = $(this).attr("data-sortkey");
+            var direction = $(this).attr("data-direction");
+            search_params.append(sortkey, direction);
+            window.replace(currentUrl.search_params);
 
             
 
-            var selectedVal = selector.val();
-            if(selectedVal != "reset"){
-                var sort = selectedVal.split("_")[0];
-                var direction = selectedVal.split("_")[1];
+            // var selectedVal = selector.val();
+            // if(selectedVal != "reset"){
+            //     var sort = selectedVal.split("_")[0];
+            //     var direction = selectedVal.split("_")[1];
 
-                currentUrl.searchParams.set("sort", sort);
-                currentUrl.searchParams.set("direction", direction);
+            //     currentUrl.searchParams.set("sort", sort);
+            //     currentUrl.searchParams.set("direction", direction);
 
-                window.location.replace(currentUrl);
-            } else {
-                currentUrl.searchParams.delete("sort");
-                currentUrl.searchParams.delete("direction");
+            //     window.location.replace(currentUrl);
+            // } else {
+            //     currentUrl.searchParams.delete("sort");
+            //     currentUrl.searchParams.delete("direction");
 
-                window.location.replace(currentUrl);
-            }
+            //     window.location.replace(currentUrl);
+            // }
         })
     </script>
 {% endblock %}
