--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -32,12 +32,9 @@
                         <ul class="collection filter-products-collection with-header show-on-small">
                             <li class="collection-header"><h5>Filter Products</h5></li>
                             <li class="collection-item center-align">
-                                <a data-sortkey="retail_price" data-direction="asc" class="waves-effect waves-light white black-text btn filter-products-btn">Lowest Price</a>
-                                <a data-sortkey="rating" data-direction="desc" class="waves-effect waves-light white black-text btn filter-products-btn">Best Ratings</a>
-                                <a data-sortkey="new" data-direction="none" class="waves-effect waves-light white black-text btn filter-products-btn">New Products</a>
-                                <!-- <a data-sortkey="retail_price" data-direction="asc" href="{% url 'products' %}?sort=retail_price&direction=asc" class="waves-effect waves-light white black-text btn filter-products-btn">Lowest Price</a>
-                                <a data-sortkey="rating" data-direction="desc" href="{% url 'products' %}?sort=rating&direction=desc" class="waves-effect waves-light white black-text btn filter-products-btn">Best Ratings</a>
-                                <a data-sortkey="new" data-direction="none" href="{% url 'products' %}?sort=new" class="waves-effect waves-light white black-text btn filter-products-btn">New Products</a> -->
+                                <a id="price-sort-button" data-sortkey="retail_price" data-direction="asc" class="waves-effect waves-light white black-text btn filter-products-btn">Lowest Price</a>
+                                <a id="rating-sort-button" data-sortkey="rating" data-direction="desc" class="waves-effect waves-light white black-text btn filter-products-btn">Best Ratings</a>
+                                <a id="new-sort-button" data-sortkey="new" data-direction="none" class="waves-effect waves-light white black-text btn filter-products-btn">New Products</a>
                             </li>
                             <li class="collection-item">
                                 <div class="input-field">
@@ -82,7 +79,7 @@
                                     <div class="rating-stars-container">
                                         {% ratings product %}
                                     </div>
-                                    <div class="chip">
+                                    <div class="chip center-align">
                                         <img src="{{ MEDIA_URL }}explore_icon.png" alt="Explore Icon">
                                         <a href="{% url 'products' %}?region={{product.region.name}}">{{ product.region.friendly_name }}</a>
                                     </div>
@@ -145,35 +142,37 @@
             $('.slider').slider();
             $('select').material_select();
             $(".button-collapse").sideNav();
+
+            var queryString = window.location.search;
+            var urlParams = new URLSearchParams(queryString);
+            var current_sortkey = urlParams.get('sort');
+            if (current_sortkey == 'retail_price') {
+                $('#price-sort-button').removeClass('white').removeClass('black-text');
+            } else if (current_sortkey == 'rating') {
+                $('#rating-sort-button').removeClass('white').removeClass('black-text');
+            } else if (current_sortkey == 'new') {
+                $('#new-sort-button').removeClass('white').removeClass('black-text');
+            };
         });
 	</script>
     <script type="text/javascript">
         $('.filter-products-btn').on('click', function() {
             var currentUrl = new URL(window.location);
-            var search_params = currentUrl.searchParams
-
+            var search_params = currentUrl.searchParams;
             var sortkey = $(this).attr("data-sortkey");
             var direction = $(this).attr("data-direction");
-            search_params.append(sortkey, direction);
-            window.replace(currentUrl.search_params);
-
-            
-
-            // var selectedVal = selector.val();
-            // if(selectedVal != "reset"){
-            //     var sort = selectedVal.split("_")[0];
-            //     var direction = selectedVal.split("_")[1];
-
-            //     currentUrl.searchParams.set("sort", sort);
-            //     currentUrl.searchParams.set("direction", direction);
-
-            //     window.location.replace(currentUrl);
-            // } else {
-            //     currentUrl.searchParams.delete("sort");
-            //     currentUrl.searchParams.delete("direction");
-
-            //     window.location.replace(currentUrl);
-            // }
+            search_params.set("sort", sortkey);
+            search_params.set("direction", direction);
+            currentUrl.search = search_params.toString();
+            var new_url = currentUrl.toString();
+            window.location.replace(new_url);
+        });
+        $('#mobile-region-selector').change(function() {
+            var selector = $(this);
+            var currentUrl = new URL(window.location);
+            var selectedRegion = selector.val();
+            currentUrl.searchParams.set("region", selectedRegion);
+            window.location.replace(currentUrl);
         })
     </script>
 {% endblock %}
